--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,10 +1,17 @@
 FROM node:20 AS builder
 WORKDIR /app
 
-COPY ../src ./src
-COPY ../package*.json ./
+COPY package*.json ./
+COPY tsconfig*.json ./
+COPY vite.config.ts ./
+COPY eslint.config.js ./
+
+COPY src ./src
+COPY public ./public
+COPY index.html ./
+
 RUN npm install && npm run build
 
 FROM nginx:alpine
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /app/src/dist /usr/share/nginx/html
+COPY docker/nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=builder /app/dist /usr/share/nginx/html
