--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,13 +1,27 @@
+
 server {
     listen 80;
 
-    location = /main-page {
+    location ^~ /main-page {
         root /usr/share/nginx/html;
         index index.html;
         try_files /index.html =404;
+    }
+
+    location ^~ /assets/ {
+        root /usr/share/nginx/html;
+    }
+
+    location = /favicon.png {
+        root /usr/share/nginx/html;
+    }
+
+    location = /manifest.webmanifest {
+        root /usr/share/nginx/html;
     }
 
     location / {
         return 403;
     }
 }
+
