added support bothub api (cloude, chatgpt and others)

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,5 @@
 VITE_SUPABASE_URL=<ваш‑URL>
 VITE_SUPABASE_PUBLIC_KEY=<ваш‑публичный‑ключ>
 VITE_OPENROUTER_API_KEY=<ваш-ключ-openrouter>
+VITE_BOTHUB_API_KEY=<ваш-ключ-bothub>
+VITE_BOTHUB_BASE_URL=<https://bothub.chat/api>
